update to department request management -fix table stylesheet spacing, add request log when status change, fix display spacing and update interactive request status icon

--- a/src/main/resources/ku/cs/styles/department/pages/request/department-request-approver-table-stylesheet.css
+++ b/src/main/resources/ku/cs/styles/department/pages/request/department-request-approver-table-stylesheet.css
@@ -33,8 +33,8 @@
 
 
 .table-row-cell:filled {
-    -fx-background-insets: 0 5 10 0; /* Create spacing effect padding! */
-    -fx-border-insets: 0 5 10 0;
+    -fx-background-insets: 0 10 10 0; /* Create spacing effect padding! */
+    -fx-border-insets: 0 10 10 0;
     -fx-padding: 10 0 10 0;
     -fx-background-radius: 20;
     -fx-border-color: black;       /* Set border color to black */
